<resources>
    <string name="app_name">Gospel Vision</string>
    <string name="drawer_bottom_text">Connect with Gospel Vision</string>
    <string name="programmes">Programmes</string>

    <!--Drawer-->
    <string-array name="drawerTitles">
        <item>Tv Schedule</item>
        <item>Prayer Request</item>
        <item>Gallery</item>
        <item>Preachers</item>
        <item>About Us</item>
        <item>Contact Us</item>
    </string-array>

    <!--error messages-->
    <string name="network_connection">Please check your internet connection</string>
    <string name="error_occurred">Sorry an error occurred</string>
    <string name="no_live_data">Sorry no live data available</string>
    <string name="moments_ago">moments ago</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>

    <!--Contact Us-->
    <string-array name="contactFragmentTitle">
        <item>Contact Us</item>
        <item>Feedback</item>
    </string-array>

    <string name="get_directions">Get Directions</string>
    <string name="name">Name*</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="e_mail">E-mail</string>
    <string name="message">Message*</string>
    <string name="submit">Submit</string>
    <string name="required">Required field</string>
    <string name="email_error">invalid email</string>
    <string name="loading">Loading</string>
    <string name="no_schedules_assigned">No Schedules Assigned</string>
    <string name="tv_schedule">Tv Schedule</string>
    <string name="request">Request</string>
    <string name="prayer_request">Prayer Request</string>
    <string name="gallery">Gallery</string>
    <string name="no_images">No images in this album</string>
    <string name="preachers">Preachers</string>

    <string-array name="preacher_date">
        <item>About</item>
        <item>Contact</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="church">Church :</string>
    <string name="contact_information">Contact Information :</string>
    <string name="times_of_service">Times of Service :</string>
    <string name="image_transition">image_transition</string>
</resources>
