<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".preachers.PreacherFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contactTab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:visibility="gone">

            <TextView
                    android:id="@+id/church_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:textStyle="bold"
                    android:text="@string/church"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/church_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web|email|phone"
                    android:padding="5dp"
                    android:text="@string/app_name"
                    android:textColor="#686a6e"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/church_text" />

            <TextView
                    android:id="@+id/info_text"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:text="@string/contact_information"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/church_tv_id" />

            <TextView
                    android:id="@+id/info_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web|email|phone"
                    android:padding="5dp"
                    android:text="@string/app_name"
                    android:textColor="#686a6e"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/info_text" />

            <TextView
                    android:id="@+id/ser_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:textStyle="bold"
                    android:text="@string/times_of_service"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/info_tv_id" />

            <TextView
                    android:id="@+id/ser_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/app_name"
                    android:textColor="#686a6e"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/ser_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/aboutTab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:visibility="gone">

            <TextView
                    android:id="@+id/name_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/desi_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:autoLink="web|phone|email"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/name_tv_id" />

            <TextView
                    android:id="@+id/about_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/about_us"
                    android:textColor="#686a6e"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/desi_tv_id" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>