<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg"
            tools:context=".prayer.PrayerRequestActivity">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fillViewport="true"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <EditText
                        android:id="@+id/editText_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2dip"
                        android:background="@drawable/rounded_rectangle_shape_cornered"
                        android:ellipsize="end"
                        android:ems="12"
                        android:fontFamily="Roboto-Condensed.ttf"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textAutoComplete"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintTop_toTopOf="parent">

                    <requestFocus />
                </EditText>

                <EditText
                        android:id="@+id/editText_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2dip"
                        android:background="@drawable/rounded_rectangle_shape_cornered"
                        android:ellipsize="end"
                        android:ems="12"
                        android:fontFamily="Roboto-Condensed.ttf"
                        android:hint="@string/e_mail"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintTop_toBottomOf="@id/editText_name" />

                <EditText
                        android:id="@+id/editText_Message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_rectangle_shape_cornered"
                        android:ellipsize="end"
                        android:ems="12"
                        android:gravity="top"
                        android:hint="@string/request"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:lines="6"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintTop_toBottomOf="@id/editText_email" />

                <Button
                        android:id="@+id/buttonSend"
                        android:layout_width="130dip"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dip"
                        android:background="@drawable/rounded_rectangle_shape"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/editText_Message" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>