<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".schedule.ScheduleActivity">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/new_white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/h1"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
                android:id="@+id/noData"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/no_schedules_assigned"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <HorizontalScrollView
                android:id="@+id/h1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0.1"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checkedButton="@+id/day1"
                    android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/day1"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_cell_alarm"
                        android:onClick="dayClickFn"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:tag="1"
                        android:text="@string/loading"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/day2"
                        android:layout_width="70dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_cell_alarm"
                        android:onClick="dayClickFn"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:tag="2"
                        android:text="@string/loading"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/day3"
                        android:layout_width="70dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_cell_alarm"
                        android:onClick="dayClickFn"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:tag="3"
                        android:text="@string/loading"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/day4"
                        android:layout_width="70dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_cell_alarm"
                        android:onClick="dayClickFn"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:tag="4"
                        android:text="@string/loading"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/day5"
                        android:layout_width="70dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_cell_alarm"
                        android:onClick="dayClickFn"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:tag="5"
                        android:text="@string/loading"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/day6"
                        android:layout_width="70dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_cell_alarm"
                        android:onClick="dayClickFn"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:tag="6"
                        android:text="@string/loading"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/day7"
                        android:layout_width="70dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_cell_alarm"
                        android:onClick="dayClickFn"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:tag="7"
                        android:text="@string/loading"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
            </LinearLayout>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>